--- a/configs/rec/rec_TBrain_train_hor.yml
+++ b/configs/rec/rec_TBrain_train_hor.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./output/rec_chinese_lite_v2.0
+  save_model_dir: ./output/rec_chinese_hor
   save_epoch_step: 3
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 2000]
@@ -16,10 +16,10 @@ Global:
   # for data or label process
   character_dict_path: /root/Storage/PaddleOCR/ppocr/utils/dict/chinese_cht_dict.txt
   character_type: chinese_cht
-  max_text_length: 25
+  max_text_length: 20
   infer_mode: False
   use_space_char: True
-  save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
+  save_res_path: ./output/rec/predicts_chinese.txt
 
 
 Optimizer:
@@ -38,17 +38,15 @@ Architecture:
   algorithm: CRNN
   Transform:
   Backbone:
-    name: MobileNetV3
-    scale: 0.5
-    model_name: small
-    small_stride: [1, 2, 2, 2]
+    name: ResNet
+    layers: 34
   Neck:
     name: SequenceEncoder
     encoder_type: rnn
-    hidden_size: 48
+    hidden_size: 256
   Head:
     name: CTCHead
-    fc_decay: 0.00001
+    fc_decay: 0.00004
 
 Loss:
   name: CTCLoss
@@ -64,7 +62,7 @@ Train:
   dataset:
     name: SimpleDataSet
     data_dir: ./train_data/rec/train
-    label_file_list: ["./train_data/rec/rec_gt_train.txt"]
+    label_file_list: ["./train_data_hor/rec/rec_gt_train.txt"]
     transforms:
       - DecodeImage: # load image
           img_mode: BGR
@@ -77,7 +75,7 @@ Train:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
     shuffle: True
-    batch_size_per_card: 24
+    batch_size_per_card: 75
     drop_last: True
     num_workers: 4
 
@@ -85,7 +83,7 @@ Eval:
   dataset:
     name: SimpleDataSet
     data_dir: ./train_data/rec/train
-    label_file_list: ["./train_data/rec/rec_gt_train.txt"]
+    label_file_list: ["./train_data_hor/rec/rec_gt_train.txt"]
     transforms:
       - DecodeImage: # load image
           img_mode: BGR
@@ -98,5 +96,5 @@ Eval:
   loader:
     shuffle: False
     drop_last: False
-    batch_size_per_card: 24
+    batch_size_per_card: 100
     num_workers: 4
