--- a/configs/rec/rec_chinese_cht_lite_train.yml
+++ b/configs/rec/rec_chinese_cht_lite_train.yml
@@ -1,25 +1,26 @@
 Global:
   use_gpu: true
-  epoch_num: 3000
+  epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./output/rec_chinese_hor
+  save_model_dir: ./output/rec_chinese_lite_v2.0
   save_epoch_step: 3
-  # evaluation is run every 2000 iterations after the 0th iteration
+  # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 2000]
   cal_metric_during_train: True
-  pretrained_model: /root/Storage/PaddleOCR/pretrained_model/ch_ppocr_server_v2.0_rec_pre/best_accuracy
-  checkpoints:
+  pretrained_model:
+  checkpoints: 
   save_inference_dir:
   use_visualdl: False
   infer_img: doc/imgs_words/ch/word_1.jpg
   # for data or label process
   character_dict_path: ppocr/utils/ppocr_keys_v1.txt
-  character_type: ch
+  # character_dict_path: /root/Storage/PaddleOCR/ppocr/utils/dict/chinese_cht_dict.txt
+  character_type: chinese_cht
   max_text_length: 25
   infer_mode: False
   use_space_char: True
-  save_res_path: ./output/rec/predicts_chinese_common_v2.0.txt
+  save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
 
 
 Optimizer:
@@ -31,22 +32,24 @@ Optimizer:
     learning_rate: 0.001
   regularizer:
     name: 'L2'
-    factor: 0.00004
+    factor: 0.00001
 
 Architecture:
   model_type: rec
   algorithm: CRNN
   Transform:
   Backbone:
-    name: ResNet
-    layers: 34
+    name: MobileNetV3
+    scale: 0.5
+    model_name: small
+    small_stride: [1, 2, 2, 2]
   Neck:
     name: SequenceEncoder
     encoder_type: rnn
-    hidden_size: 256
+    hidden_size: 48
   Head:
     name: CTCHead
-    fc_decay: 0.00004
+    fc_decay: 0.00001
 
 Loss:
   name: CTCLoss
@@ -61,8 +64,8 @@ Metric:
 Train:
   dataset:
     name: SimpleDataSet
-    data_dir: ./train_data/rec/train
-    label_file_list: ["./train_data_hor/rec/rec_gt_train.txt"]
+    data_dir: ./train_data/
+    label_file_list: ["./train_data/train_list.txt"]
     transforms:
       - DecodeImage: # load image
           img_mode: BGR
@@ -75,15 +78,15 @@ Train:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
     shuffle: True
-    batch_size_per_card: 75
+    batch_size_per_card: 256
     drop_last: True
-    num_workers: 4
+    num_workers: 8
 
 Eval:
   dataset:
     name: SimpleDataSet
-    data_dir: ./train_data/rec/train
-    label_file_list: ["./train_data_hor/rec/rec_gt_val.txt"]
+    data_dir: ./train_data
+    label_file_list: ["./train_data/val_list.txt"]
     transforms:
       - DecodeImage: # load image
           img_mode: BGR
@@ -96,5 +99,5 @@ Eval:
   loader:
     shuffle: False
     drop_last: False
-    batch_size_per_card: 75
-    num_workers: 4
+    batch_size_per_card: 256
+    num_workers: 8
