--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,74 @@
-shapely
-scikit-image==0.17.2
+astor==0.8.1
+Babel==2.9.1
+backports.entry-points-selectable==1.1.0
+bce-python-sdk==0.8.62
+cachetools==4.2.2
+certifi==2021.5.30
+cfgv==3.3.1
+charset-normalizer==2.0.4
+click==8.0.1
+cssselect==1.1.0
+cssutils==2.3.0
+cycler==0.10.0
+decorator==5.1.0
+distlib==0.3.2
+et-xmlfile==1.1.0
+filelock==3.0.12
+flake8==3.9.2
+Flask==2.0.1
+Flask-Babel==2.0.0
+future==0.18.2
+gast==0.3.3
+identify==2.2.14
+idna==3.2
+imageio==2.9.0
 imgaug==0.4.0
-pyclipper
-lmdb
-tqdm
-numpy
-visualdl
-python-Levenshtein
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+kiwisolver==1.3.2
+lmdb==1.2.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+mccabe==0.6.1
+natsort==7.1.1
+networkx==2.6.3
+nodeenv==1.6.0
+numpy==1.21.2
+opencc-python-reimplemented==0.1.6
 opencv-contrib-python==4.4.0.46
-lxml
-premailer
-openpyxl
+opencv-python==4.5.3.56
+openpyxl==3.0.8
+paddlepaddle-gpu==2.0.0
+pandas==1.3.3
+Pillow==8.3.2
+platformdirs==2.3.0
+pre-commit==2.15.0
+premailer==3.10.0
+protobuf==3.17.3
+pyclipper==1.3.0
+pycodestyle==2.7.0
+pycryptodome==3.10.1
+pyflakes==2.3.1
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python-Levenshtein==0.12.2
+pytz==2021.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+requests==2.26.0
+scikit-image==0.17.2
+scipy==1.7.1
+Shapely==1.7.1
+shellcheck-py==0.7.2.1
+six==1.16.0
+tifffile==2021.8.30
+toml==0.10.2
+tqdm==4.62.2
+typing-extensions==3.10.0.2
+urllib3==1.26.6
+virtualenv==20.7.2
+visualdl==2.2.1
+Werkzeug==2.0.1
+zipp==3.5.0
